--- a/src/main/webapp/app/entities/check-point/list/check-point.component.html
+++ b/src/main/webapp/app/entities/check-point/list/check-point.component.html
@@ -46,7 +46,7 @@
           <td>{{ checkPoint.friendlyname }}</td>
           <td>
             <div *ngIf="checkPoint.location">
-              <a [routerLink]="['/location', checkPoint.location?.id, 'view']">{{ checkPoint.location?.id }}</a>
+              <a [routerLink]="['/location', checkPoint.location?.id, 'view']">{{ checkPoint.location?.city }}</a>
             </div>
           </td>
           <td class="text-end">
