--- a/src/main/webapp/app/entities/country/detail/country-detail.component.html
+++ b/src/main/webapp/app/entities/country/detail/country-detail.component.html
@@ -21,7 +21,7 @@
         <dt><span jhiTranslate="albatestApp.country.region">Region</span></dt>
         <dd>
           <div *ngIf="country.region">
-            <a [routerLink]="['/region', country.region?.id, 'view']">{{ country.region?.id }}</a>
+            <a [routerLink]="['/region', country.region?.id, 'view']">{{ country.region?.regionName }}</a>
           </div>
         </dd>
       </dl>
