--- a/src/main/webapp/app/entities/location/detail/location-detail.component.html
+++ b/src/main/webapp/app/entities/location/detail/location-detail.component.html
@@ -33,7 +33,7 @@
         <dt><span jhiTranslate="albatestApp.location.country">Country</span></dt>
         <dd>
           <div *ngIf="location.country">
-            <a [routerLink]="['/country', location.country?.id, 'view']">{{ location.country?.id }}</a>
+            <a [routerLink]="['/country', location.country?.id, 'view']">{{ location.country?.countryName }}</a>
           </div>
         </dd>
       </dl>
