--- a/src/main/webapp/app/entities/medical-survey/detail/medical-survey-detail.component.html
+++ b/src/main/webapp/app/entities/medical-survey/detail/medical-survey-detail.component.html
@@ -25,7 +25,7 @@
         <dt><span jhiTranslate="albatestApp.medicalSurvey.attachment">Attachment</span></dt>
         <dd>
           <div *ngIf="medicalSurvey.attachment">
-            <a [routerLink]="['/attachment', medicalSurvey.attachment?.id, 'view']">{{ medicalSurvey.attachment?.id }}</a>
+            <a [routerLink]="['/attachment', medicalSurvey.attachment?.id, 'view']">{{ medicalSurvey.attachment?.description }}</a>
           </div>
         </dd>
       </dl>
