--- a/src/main/webapp/app/entities/medical-survey/update/medical-survey-update.component.html
+++ b/src/main/webapp/app/entities/medical-survey/update/medical-survey-update.component.html
@@ -55,7 +55,7 @@
               "
               *ngFor="let attachmentOption of attachmentsSharedCollection; trackBy: trackAttachmentById"
             >
-              {{ attachmentOption.id }}
+              {{ attachmentOption.description }}
             </option>
           </select>
         </div>
