--- a/src/main/webapp/app/entities/legal-survey/detail/legal-survey-detail.component.html
+++ b/src/main/webapp/app/entities/legal-survey/detail/legal-survey-detail.component.html
@@ -25,7 +25,7 @@
         <dt><span jhiTranslate="albatestApp.legalSurvey.attachment">Attachment</span></dt>
         <dd>
           <div *ngIf="legalSurvey.attachment">
-            <a [routerLink]="['/attachment', legalSurvey.attachment?.id, 'view']">{{ legalSurvey.attachment?.id }}</a>
+            <a [routerLink]="['/attachment', legalSurvey.attachment?.id, 'view']">{{ legalSurvey.attachment?.description }}</a>
           </div>
         </dd>
       </dl>
