--- a/src/main/webapp/app/entities/medical-survey/list/medical-survey.component.html
+++ b/src/main/webapp/app/entities/medical-survey/list/medical-survey.component.html
@@ -48,7 +48,7 @@
           <td>{{ medicalSurvey.ongoingTreatments }}</td>
           <td>
             <div *ngIf="medicalSurvey.attachment">
-              <a [routerLink]="['/attachment', medicalSurvey.attachment?.id, 'view']">{{ medicalSurvey.attachment?.id }}</a>
+              <a [routerLink]="['/attachment', medicalSurvey.attachment?.id, 'view']">{{ medicalSurvey.attachment?.description }}</a>
             </div>
           </td>
           <td class="text-end">
