Revert "Squashed commit of the following:"
This reverts commit 8bc222dda012ffc85282e30cd6f45230ce385f6b.

--- a/src/main/webapp/app/entities/check-point/detail/check-point-detail.component.html
+++ b/src/main/webapp/app/entities/check-point/detail/check-point-detail.component.html
@@ -21,7 +21,7 @@
         <dt><span jhiTranslate="albatestApp.checkPoint.location">Location</span></dt>
         <dd>
           <div *ngIf="checkPoint.location">
-            <a [routerLink]="['/location', checkPoint.location?.id, 'view']">{{ checkPoint.location?.city }}</a>
+            <a [routerLink]="['/location', checkPoint.location?.id, 'view']">{{ checkPoint.location?.id }}</a>
           </div>
         </dd>
       </dl>
