--- a/src/main/webapp/app/entities/country/update/country-update.component.html
+++ b/src/main/webapp/app/entities/country/update/country-update.component.html
@@ -33,7 +33,7 @@
               [ngValue]="regionOption.id === editForm.get('region')!.value?.id ? editForm.get('region')!.value : regionOption"
               *ngFor="let regionOption of regionsCollection; trackBy: trackRegionById"
             >
-              {{ regionOption.regionName }}
+              {{ regionOption.id }}
             </option>
           </select>
         </div>
