--- a/src/main/webapp/app/entities/legal-survey/update/legal-survey-update.component.html
+++ b/src/main/webapp/app/entities/legal-survey/update/legal-survey-update.component.html
@@ -37,7 +37,7 @@
               "
               *ngFor="let attachmentOption of attachmentsSharedCollection; trackBy: trackAttachmentById"
             >
-              {{ attachmentOption.description }}
+              {{ attachmentOption.id }}
             </option>
           </select>
         </div>
