--- a/src/main/webapp/app/entities/location/list/location.component.html
+++ b/src/main/webapp/app/entities/location/list/location.component.html
@@ -52,7 +52,7 @@
           <td>{{ location.stateProvince }}</td>
           <td>
             <div *ngIf="location.country">
-              <a [routerLink]="['/country', location.country?.id, 'view']">{{ location.country?.countryName }}</a>
+              <a [routerLink]="['/country', location.country?.id, 'view']">{{ location.country?.id }}</a>
             </div>
           </td>
           <td class="text-end">
