--- a/src/main/webapp/app/entities/attachment/list/attachment.component.html
+++ b/src/main/webapp/app/entities/attachment/list/attachment.component.html
@@ -65,12 +65,12 @@
           <td jhiTranslate="{{ 'albatestApp.ContentType.' + attachment.contentType }}">{{ attachment.contentType }}</td>
           <td>
             <div *ngIf="attachment.category">
-              <a [routerLink]="['/attachment-category', attachment.category?.id, 'view']">{{ attachment.category?.description }}</a>
+              <a [routerLink]="['/attachment-category', attachment.category?.id, 'view']">{{ attachment.category?.id }}</a>
             </div>
           </td>
           <td>
             <div *ngIf="attachment.refugee">
-              <a [routerLink]="['/refugee', attachment.refugee?.id, 'view']">{{ attachment.refugee?.qrcodeUUID }}</a>
+              <a [routerLink]="['/refugee', attachment.refugee?.id, 'view']">{{ attachment.refugee?.id }}</a>
             </div>
           </td>
           <td>
@@ -81,7 +81,7 @@
           <td>
             <div *ngIf="attachment.originalRegistrationRecord">
               <a [routerLink]="['/event', attachment.originalRegistrationRecord?.id, 'view']">{{
-                attachment.originalRegistrationRecord?.notes
+                attachment.originalRegistrationRecord?.id
               }}</a>
             </div>
           </td>
